--- a/seatify-fe/package.json
+++ b/seatify-fe/package.json
@@ -33,6 +33,7 @@
     "husky": "^8.0.3",
     "next": "13.4.2",
     "next-redux-wrapper": "^8.1.0",
+    "nookies": "^2.5.2",
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
